--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ h1 {
     padding: 20px 10px;
 }
 
+<style>
+ .parallax {
+     /* The image used */
+     background-image: url("img_parallax.jpg");
+
+     /* Set a specific height */
+     height: 500px;
+
+     /* Create the parallax scrolling effect */
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+ }
+</style>
+
 /* Style the header links */
 .header a {
     float: left;
