--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 body {
     font-family: arial, sans-serif;
     background: whitesmoke;
-    margin: 0;
-    padding: 0;
+    display: grid;
+    padding: 0px;
+    margin: 0px;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
 }
+
+header {
+    background: #F1F3F4;
+    border-color: #d5d5d5;
+    grid-column: 1 / span 3;
+    grid-row: 1;
+}
+
 h1 {
     text-align: center;
     vertical-align: middle;
@@ -18,8 +30,8 @@ h2 {
     font-weight: bold;
 }
 
-#Tauben {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+div
+
+#post {
+
 }
