--- a/style.css
+++ b/style.css
@@ -1,30 +1,5 @@
 body {
     font: 20px Roboto, sans-serif;
     background-color: white;
-}
-
-.jumbotron {
-    background-color: whitesmoke;
-}
-
-.logo {
-    padding: 40px;
-}
-
-.loginbutton {
-    background-color: transparent;
-    padding: 7px;
-    border: none;
-    color: #0068ff;
-    text-decoration: none;
-    font-size: 20px;
-}
-.loginbutton:hover {
-    border-radius: 5px;
-    background-color: #0068ff;
-    color: whitesmoke;
-}
-
-.margin {
-    margin: 60px;
+    background: linear-gradient(#cba, darkslategrey);
 }
