--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
 body {
-    font: 16px Roboto, sans-serif;
+    font: 14px Roboto, sans-serif;
     background-color: white;
 }
+
+
+@media screen and (min-width: 600px) {
+    .marginmedia {
+        margin: 70px;
+        padding-left: 20%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .marginmediasm {
+        margin-top: 70px;
+    }
+}
+
 @media only screen and (max-width: 1000px) {
     .registrieren{
         padding-left: 0!important;
@@ -21,13 +36,30 @@ body {
 
 .loginbutton {
     background-color: transparent;
-    padding: 7px;
+    padding: 8px;
     border: none;
     color: #0068ff;
     text-decoration: none;
     font-size: 20px;
 }
 .loginbutton:hover {
+    border-radius: 5px;
+    padding: 5px;
+    border: solid;
+    border-color: #0068ff;
+    background-color: transparent;
+    text-decoration: none;
+    color: #0068ff;
+}
+.registerbutton {
+    background-color: transparent;
+    padding: 7px;
+    border: none;
+    color: #0068ff;
+    text-decoration: none;
+    font-size: 20px;
+}
+.registerbutton:hover {
     border-radius: 5px;
     background-color: #0068ff;
     text-decoration: none;
