--- a/style.css
+++ b/style.css
@@ -38,12 +38,6 @@ body {
     padding: 30px;
 }
 
-.parallax {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
 .registerbutton {
     background-color: transparent;
     padding: 8px;
@@ -107,4 +101,16 @@ body {
     padding: 0;
     padding-bottom: -10px;
     border-color: white;
+}
+.postings-margin {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.postings-padding {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-fit {
+    object-fit: cover;
 }
