--- a/style.css
+++ b/style.css
@@ -99,8 +99,9 @@ body {
 }
 .jumbotron-fluid {
     padding: 0;
-    padding-bottom: -10px;
+    padding-bottom: 0px;
     border-color: white;
+    height: 50%;
 }
 .postings-margin {
     margin-left: 10px;
@@ -113,4 +114,8 @@ body {
 }
 .img-fit {
     object-fit: cover;
+}
+
+.swal2-confirm {
+    background-color: red!important;
 }
